--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
     <title> Calculator </title>
 </head>
 <body>
-    <h1> The calculator</h1>
+ <div class="container">   
+    <h1>The calculator</h1>
+    <main>
+        <section> 
+            <input id="display"></input>
+        </section>
+        <section class="buttons">
+          <div class="first-row">  
+            <button id="one"> 1 </button>
+            <button id="two"> 2 </button>
+            <button id="four"> 3 </button>
+            <button id="addition"> + </button>
+          </div>  
+          <div class="second-row">
+            <button id="four"> 4 </button>
+            <button id="five">  5 </button>
+            <button id="six"> 6</button>
+            <button id="substract"> - </button>
+           </div>  
+           <div>
+            <button id="seven"> 7 </button>
+            <button id="eight"> 8 </button>
+            <button id="nine"> 9 </button>
+            <button id="divide"> /</button>
+            </div>
+            <div>
+            <button id="zero"> 0 </button>
+            <button id ="multiplicate"> * </button>
+            <button id="result"> = </button>
+            <button id="clear"> Clear</button>
+            </div>
+        </section>
+    </main>
+</div>
 </body>
 <script src="src/script.js"></script>
 </html>
