--- a/index.html
+++ b/index.html
@@ -12,33 +12,34 @@
     <h1>The calculator</h1>
     <main>
         <section> 
-            <input id="display"></input>
+            <input id="display" type="text"></input>
         </section>
         <section class="buttons">
           <div class="first-row">  
-            <button id="one"> 1 </button>
-            <button id="two"> 2 </button>
-            <button id="four"> 3 </button>
-            <button id="addition"> + </button>
+            <button class="number"> 1 </button>
+            <button class="number"> 2 </button>
+            <button class="number"> 3 </button>
+            <button id="operator"> + </button>
           </div>  
           <div class="second-row">
-            <button id="four"> 4 </button>
-            <button id="five">  5 </button>
-            <button id="six"> 6</button>
-            <button id="substract"> - </button>
+            <button class="number"> 4 </button>
+            <button class="number">  5 </button>
+            <button class="number"> 6</button>
+            <button id="operator"> - </button>
            </div>  
            <div>
-            <button id="seven"> 7 </button>
-            <button id="eight"> 8 </button>
-            <button id="nine"> 9 </button>
-            <button id="divide"> /</button>
+            <button class="number"> 7 </button>
+            <button class="number"> 8 </button>
+            <button class="number"> 9 </button>
+            <button id="operator"> / </button>
             </div>
             <div>
-            <button id="zero"> 0 </button>
-            <button id ="multiplicate"> * </button>
+            <button id="backspace"> Back </button>
+            <button class="number"> 0 </button>
+            <button id ="operator"> * </button>
             <button id="result"> = </button>
-            <button id="clear"> Clear</button>
             </div>
+            <button id="clear"> Clear</button>
         </section>
     </main>
 </div>
