--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="buttons">
           <div class="first-row">  
             <button class="number"> 1 </button>
-            <button class="number"> 2 </button>
+            <button class="number"> 2 </button> 
             <button class="number"> 3 </button>
             <button id="operator"> + </button>
           </div>  
@@ -39,7 +39,7 @@
             <button id ="operator"> * </button>
             <button id="result"> = </button>
             </div>
-            <button id="clear"> Clear</button>
+            <button id="clear" value= "clear" onclick= "clearInput()"> Clear</button>
         </section>
     </main>
 </div>
