--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
             <button class="number"> 1 </button>
             <button class="number"> 2 </button> 
             <button class="number"> 3 </button>
-            <button id="operator"> + </button>
+            <button class="operator"> + </button>
           </div>  
           <div class="second-row">
             <button class="number"> 4 </button>
-            <button class="number">  5 </button>
-            <button class="number"> 6</button>
-            <button id="operator"> - </button>
+            <button class="number"> 5 </button>
+            <button class="number"> 6 </button>
+            <button class="operator"> - </button>
            </div>  
            <div>
             <button class="number"> 7 </button>
             <button class="number"> 8 </button>
             <button class="number"> 9 </button>
-            <button id="operator"> / </button>
+            <button class="operator"> / </button>
             </div>
             <div>
             <button id="backspace"> Back </button>
             <button class="number"> 0 </button>
-            <button id ="operator"> * </button>
+            <button class ="operator"> * </button>
             <button id="result"> = </button>
             </div>
-            <button id="clear" value= "clear" onclick= "clearInput()"> Clear</button>
+            <button id="clear" value= "clear"  onclick= "clearInput()"> Clear</button>
         </section>
     </main>
 </div>
